--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrapper">
     <header>Guess a number from 1 to 100</header>
-    <p class="message"></p>
+    <p class="message">text</p>
     <div class="input-field">
       <input type="number" />
       <button>Check</button>
@@ -20,7 +20,7 @@
     <p>You have <span class="guesses-left">10</span> guesses left</p>
   </div>
 
-
+<script src="assets/js/script.js"></script>
 </body>
 
 </html>
