Remove placeholder text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrapper">
     <header>Guess a number from 1 to 100</header>
-    <p class="message">text</p>
+    <p class="message"></p>
     <div class="input-field">
       <input type="number" />
       <button>Check</button>
